--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,7 @@ p {
   font-size: 18px;
   font-weight: 700;
   box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.4);
+  cursor: pointer;
 }
 
 .payment button:hover {
