I made some changes on my heading levels and page content landmarks inorder to pass accessibility tests.

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ a {
 }
 
 h1,
-h3 {
+h2 {
   font-family: "Red Hat Display", sans-serif;
   font-weight: 900;
   color: hsl(223, 47%, 23%);
@@ -44,21 +44,21 @@ p {
 .card img {
   width: 100%;
   border-radius: 1rem 1rem 0 0;
+  margin-bottom: 20px;
 }
 
 .card-text {
   text-align: center;
   font-family: "Red Hat Display", sans-serif;
   padding: 10px 50px;
-  margin-top: 10px;
-  line-height: 1.6;
+  line-height: 1.8;
   margin-bottom: 20px;
 }
 
-.card-content {
+.content-container {
   background-color: hsl(225, 100%, 98%);
   display: flex;
-  gap: 10px;
+  gap: 15px;
   justify-content: space-between;
   align-items: center;
   padding: 1.5rem;
@@ -66,7 +66,7 @@ p {
   width: 350px;
   margin: auto;
 }
-.card-content img {
+.content-container img {
   width: 20%;
 }
 
@@ -91,7 +91,7 @@ p {
   padding: 15px 90px;
   border-radius: 10px;
   background-color: hsl(245, 75%, 52%);
-  margin: 30px 0px 20px 0px;
+  margin: 30px 0px 10px 0px;
   color: #fff;
   border: none;
   font-family: "Red Hat Display", sans-serif;
@@ -106,17 +106,17 @@ p {
   color: #fff;
 }
 
-.cancel {
+footer {
   margin-top: 20px;
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
-.cancel a {
+footer a {
   text-decoration: none;
   color: hsl(224, 23%, 55%);
 }
 
-.cancel a:hover {
+footer a:hover {
   color: hsl(223, 47%, 23%);
   font-weight: 900;
 }
@@ -134,19 +134,19 @@ p {
     background-color: hsl(225, 100%, 94%);
   }
 
-  .container {
+  main{
     padding: 10px;
   }
 
   .row {
-    margin-top: 20px;
+    margin-top: 10px;
   }
 
   .card {
-    width: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   }
 
-  .card-content {
+  .content-container{
     width: 300px;
     padding: 1rem;
     gap: 20px;
@@ -170,5 +170,8 @@ p {
   }
   body {
     background-repeat: no-repeat;
+
   }
+
+
 }
